--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <modules>
         <module>controller</module>
         <module>application</module>
+        <module>repository</module>
     </modules>
 
     <dependencies>
