--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -10,28 +10,27 @@
     </parent>
 
     <groupId>de.qaware.demo.spring-boot-testing-demo</groupId>
-    <artifactId>application</artifactId>
+    <artifactId>repository</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>de.qaware.demo.spring-boot-testing-demo</groupId>
-            <artifactId>controller</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>de.qaware.demo.spring-boot-testing-demo</groupId>
-            <artifactId>repository</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <!-- Not in test scope for Demo purposes -->
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
