feat: finally make re-using context possible by moving @WebMvcTest to base class

--- a/application/src/test/resources/application-test.yaml
+++ b/application/src/test/resources/application-test.yaml
@@ -1,2 +1,7 @@
 bar:
   default-response: bar bar bar yeah
+
+
+# Enable this for debugging Spring Context cache misses
+#logging.level:
+#  org.springframework.test.context.cache: DEBUG
